Fixed background image URL in CSS

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Higher Secondary | Passed with 82%
     <div class="row">
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="/Portfolio/css/images.png" class="card-img-top w-25 m-auto pt-4" alt="Html">
+  <img src="css/images.png" class="card-img-top w-25 m-auto pt-4" alt="Html">
   <div class="card-body">
     <h5 class="card-title">Html</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
@@ -91,7 +91,7 @@ Higher Secondary | Passed with 82%
       </div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="/Portfolio/css/css png.png" class="card-img-top w-25 m-auto pt-4" alt="Css">
+  <img src="css/css png.png" class="card-img-top w-25 m-auto pt-4" alt="Css">
   <div class="card-body">
     <h5 class="card-title">Css</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
@@ -100,7 +100,7 @@ Higher Secondary | Passed with 82%
       </div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="/Portfolio/css/png-transparent-javascript-logo-html-javascript-logo-angle-text-rectangle-thumbnail.png" class="card-img-top w-25 m-auto pt-4" alt="Java Script">
+  <img src="css/png-transparent-javascript-logo-html-javascript-logo-angle-text-rectangle-thumbnail.png" class="card-img-top w-25 m-auto pt-4" alt="Java Script">
   <div class="card-body">
     <h5 class="card-title">Java Script</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
@@ -109,7 +109,7 @@ Higher Secondary | Passed with 82%
     </div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="/Portfolio/css/jquery-250x250.webp" class="card-img-top w-25 m-auto pt-4" alt="Jquery">
+  <img src="css/jquery-250x250.webp" class="card-img-top w-25 m-auto pt-4" alt="Jquery">
   <div class="card-body">
     <h5 class="card-title"></h5>Jquery
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
