--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Higher Secondary | Passed with 82%
 2022 – 2023</p>
 </div>
       <div class="col-md-6 text-center">
-         <img src="/Portfolio/css/WhatsApp Image 2025-06-17 at 5.42.46 PM.jpeg" alt="Prathipa" class="img-fluid w-75 ">
+         <img src="css/prathipa.jpeg" alt="Prathipa" class="img-fluid w-75 ">
       </div>
     </div>
     </div>
