--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Prathipa Portfolio </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Portfolio/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
    <nav class="navbar navbar-expand-lg bg-body-tertiary py-4 border-bottom border-light-subtle sticky-top">
@@ -66,7 +66,7 @@ Higher Secondary | Passed with 82%
 2022 – 2023</p>
 </div>
       <div class="col-md-6 text-center">
-         <img src="./images/WhatsApp-Image-2025-06-17-at-5.42.46-PM.jpeg" alt="Prathipa" class="img-fluid w-75 ">
+         <img src="css/prathipa.jpeg" alt="Prathipa" class="img-fluid w-75 ">
       </div>
     </div>
     </div>
@@ -74,6 +74,7 @@ Higher Secondary | Passed with 82%
 </section>
 <section id="Skills"class="bg-secondary-subtle skills-padding">
   <div class="container">
+    <div class="skill-card">
     <div class="row">
       <div class="col-md-12">
          <h3 class="text-center py-4"> Skills </h3>
@@ -82,38 +83,46 @@ Higher Secondary | Passed with 82%
     <div class="row">
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="./Portfolio/css/images.png" class="card-img-top w-25 m-auto pt-4" alt="Html">
+          <div class="skill-card">
+  <img src="css/images.png" class="card-img-top w-25 m-auto pt-4" alt="Html">
   <div class="card-body">
     <h5 class="card-title">Html</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
   </div>
 </div>
       </div>
+      </div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="./Portfolio/css/css png.png" class="card-img-top w-25 m-auto pt-4" alt="Css">
+           <div class="skill-card">
+  <img src="css/css png.png" class="card-img-top w-25 m-auto pt-4" alt="Css">
   <div class="card-body">
     <h5 class="card-title">Css</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
   </div>
 </div>
-      </div>
+</div>
+</div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="./Portfolio/css/png-transparent-javascript-logo-html-javascript-logo-angle-text-rectangle-thumbnail.png" class="card-img-top w-25 m-auto pt-4" alt="Java Script">
+          <div class="skill-card">
+  <img src="css/png-transparent-javascript-logo-html-javascript-logo-angle-text-rectangle-thumbnail.png" class="card-img-top w-25 m-auto pt-4" alt="Java Script">
   <div class="card-body">
     <h5 class="card-title">Java Script</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+  </div>
   </div>
 </div>
     </div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
-  <img src="./Portfolio/css/jquery-250x250.webp" class="card-img-top w-25 m-auto pt-4" alt="Jquery">
+          <div class="skill-card">
+  <img src="css/jquery-250x250.webp" class="card-img-top w-25 m-auto pt-4" alt="Jquery">
   <div class="card-body">
     <h5 class="card-title"></h5>Jquery
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
   </div>
+</div>
 </div>
       </div>
 </section>
