updated skills section responsiveness

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ Higher Secondary | Passed with 82%
 </section>
 <section id="Skills"class="bg-secondary-subtle skills-padding">
   <div class="container">
+    <div class="skill-card">
     <div class="row">
       <div class="col-md-12">
          <h3 class="text-center py-4"> Skills </h3>
@@ -82,6 +83,7 @@ Higher Secondary | Passed with 82%
     <div class="row">
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
+          <div class="skill-card">
   <img src="css/images.png" class="card-img-top w-25 m-auto pt-4" alt="Html">
   <div class="card-body">
     <h5 class="card-title">Html</h5>
@@ -89,31 +91,38 @@ Higher Secondary | Passed with 82%
   </div>
 </div>
       </div>
+      </div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
+           <div class="skill-card">
   <img src="css/css png.png" class="card-img-top w-25 m-auto pt-4" alt="Css">
   <div class="card-body">
     <h5 class="card-title">Css</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
   </div>
 </div>
-      </div>
+</div>
+</div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
+          <div class="skill-card">
   <img src="css/png-transparent-javascript-logo-html-javascript-logo-angle-text-rectangle-thumbnail.png" class="card-img-top w-25 m-auto pt-4" alt="Java Script">
   <div class="card-body">
     <h5 class="card-title">Java Script</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
   </div>
+  </div>
 </div>
     </div>
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
+          <div class="skill-card">
   <img src="css/jquery-250x250.webp" class="card-img-top w-25 m-auto pt-4" alt="Jquery">
   <div class="card-body">
     <h5 class="card-title"></h5>Jquery
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
   </div>
+</div>
 </div>
       </div>
 </section>
