update skills section with grid layout

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ Higher Secondary | Passed with 82%
       </div>
     </div>
     <div class="row">
+      <div class="skills-container">
       <div class="col-md-3">
         <div class="card text-center" style="width: 18rem;">
           <div class="skill-card">
@@ -124,6 +125,7 @@ Higher Secondary | Passed with 82%
   </div>
 </div>
 </div>
+      </div>
       </div>
 </section>
 <section id="Contact"class="bg-secondary skills-padding">
