Add: Resume and download button

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <a href="https://www.linkedin.com/in/hari-prathipa" target="_blank">
   Connect with me on LinkedIn
 </a>
+<p class="pb-1">2024 – 2025</p>
+<a href="css/Prathipa One Page Resume.jpg" class="btn btn-primary mt-3" download>Download Resume</a>
       </div>
     </div>
   </div>
