--- a/Portfolio/public/index.html
+++ b/Portfolio/public/index.html
@@ -49,6 +49,11 @@ app.post('/contact', async (req, res) => {
   }
 });
 
+// ✅ Handle unknown routes
+app.use((req, res) => {
+  res.status(404).send('❌ Page Not Found');
+});
+
 // ✅ Start Server
 const PORT = process.env.PORT || 3000;
 app.listen(PORT, () => {
