--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,25 @@ Higher Secondary | Passed with 82%
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
+ <script>
+  const form = document.getElementById("contactForm");
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+    const response = await fetch("/submit", {
+      method: "POST",
+      body: formData
+    });
+
+    if (response.ok) {
+      alert("Message received!");
+      form.reset();
+    } else {
+      alert("Something went wrong. Please try again.");
+    }
+  });
+</script>
       </div>
     </div>
   </div>
